# StudyGenius-AI

./: .gitignore  QUICKSTART.md  README.md
backend/: .env.example  .gitignore  CONFIG.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/ai_quiz_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/api/: quiz.py  routes.py
backend/app/core/: settings.py
backend/app/rag/: chunking.py  corpus.py  embeddings.py  faiss_store.py  loaders.py  tokenization.py  types.py
backend/app/scripts/: build_indexes.py
backend/app/services/: groq_client.py  prompting.py  quiz_generator.py  schemas.py
backend/docs/cloud/: sample.txt
backend/docs/mobile/: sample.txt
backend/docs/networking/: sample.txt
backend/docs/web/: sample.txt
backend/src/: app.module.ts  main.ts
backend/src/ai/: ai.controller.ts  ai.service.ts
backend/src/ai/dto/: analyze-text.dto.ts  generate-qcm.dto.ts  qcm-response.dto.ts
backend/src/auth/: auth.module.ts  auth.service.ts
backend/src/auth/dto/: auth-response.dto.ts
backend/src/courses/: courses.controller.ts  courses.module.ts  courses.service.ts
backend/src/documents/: documents.controller.ts  documents.module.ts  documents.service.ts
backend/src/entities/: course.entity.ts  document.entity.ts  exam-result.entity.ts  exam.entity.ts  qcm-generated.entity.ts  question.entity.ts  user.entity.ts
backend/src/exams/: exams.controller.ts  exams.module.ts  exams.service.ts
backend/src/users/: users.module.ts  users.service.ts
backend/static/: index.html
(+65 files in other folders)
